--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
